# infotecs-task

./: CMakeLists.txt  README.md
infotecs_client/: Buffer.cpp  Buffer.h  CMakeLists.txt  ServerConnection.cpp  ServerConnection.h  client_main.cpp  user_input.cpp  user_input.h
infotecs_server/: CMakeLists.txt  server_main.cpp  server_utils.cpp  server_utils.h
